Kubernetes/Kodecloud/lab1-deployment-resouces.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    labels:
        app: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                -   name: redis
                    image: redis:alpine
                    resources:
                        requests:
                            cpu: "0.2"
                    ports:
                        -   containerPort: 6379
                    volumeMounts:
                        -   name: data
                            mountPath: /redis-master-data
                        -   name: redis-config
                            mountPath: /redis-master
            volumes:
                -   name: data
                    emptyDir: {}
                -   name: redis-config
                    configMap:
                        name: redis-config
