Kubernetes/Kodecloud/lab1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:   
    name: nginx-deploy
    labels:
        app: nginx
spec:
    replicas: 4
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
                -   name: nginx
                    image: nginx:1.16
                    ports:
                        -   containerPort: 80
