Kubernetes/Kodecloud/lab1-pod-time-check.yaml
apiVersion: v1
kind: Pod
metadata:
    name: time-check
    namespace: dvl1987
spec:
    containers:
        -   name: time-check
            image: busybox
            command:
                -   /bin/sh
                -   -c
                -   |
                    while true; do
                        date >> /opt/time/time-check.log;
                        sleep $TIME_FREQ;
                    done
            volumeMounts:
                -   name: time-volume
                    mountPath: /opt/time
    volumes:
        -   name: time-volume
            emptyDir: {}
