Kubernetes/Kodecloud/lab1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: logger
spec:
    containers:
        -   name: logger
            image: nginx:alpine
            volumeMounts:
                -   mountPath: /var/www/nginx
                    name: log
    volumes:
        -   name: log
            persistentVolumeClaim:
                claimName: log-claim
