Kubernetes/Kodecloud/lab2-pod1.yaml
apiVersion: v1
kind: Pod
metadata:
    name: my-busybox
    namespace: dev2406
spec:
    containers:
        -   name: secret
            image: busybox
            command: ["sleep", "3600"]
            volumeMounts:
                -   name: secret-volume
                    mountPath: /etc/secret-volume
                    readOnly: true
    volumes:
        -   name: secret-volume
            secret:
                secretName: dotfile-secret
    nodeSelector:
        kubernetes.io/hostname: controlplane
